<resources>
    <string name="app_name">Fanipol Parking</string>

    <!--Driver fragment-->
    <string name="car_number">Введите гос. номер авто</string>
    <string name="car_number_edit1">7777</string>
    <string name="car_number_edit2">АВ</string>
    <string name="car_number_edit3">5</string>
    <string name="driver_check_button">Проверить</string>
    <string name="warning_match_car">Такого авто нет на стоянке</string>
    <string name="warning_no_internet">Отсутствует интернет</string>

    <!--Admin fragment-->
    <string name="password_edit">Пароль</string>
    <string name="admin_enter_button">Вход</string>
    <string name="warning_wrong_password">Неверный пароль</string>

    <!--Found Driver dialog-->
    <string name="car_model">Марка:</string>
    <string name="car_number_info">Гос.номер:</string>
    <string name="info">Информация</string>
    <string name="ok_button">ОК</string>
    
    <!--Remove driver dialog-->
    <string name="remove_car_title">Удаление авто</string>
    <string name="remove_confirm">Точно удалить авто ?</string>
    <string name="remove_yes">Да</string>
    <string name="remove_no">Нет</string>

    <string name="add_car">+ Авто</string>

    <!--Add/edit car screen-->
    <string name="driver_phone">Телефон водителя:</string>
    <string name="pay_day">Оплачено до:</string>
    <string name="created_day">Авто добавлено:</string>
    <string name="car_number_add">1234АВ5</string>
    <string name="car_model_add">VW Passat B6</string>
    <string name="driver_phone_add">+375442332214</string>
    <string name="pay_day_add">25.12.2018</string>
    <string name="pay_day_edit">продлить стоянку</string>
    <string name="pay_day_count">Кол-во дней</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="delete_car">Удалить авто</string>

</resources>
