<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewmodel"
            type="com.example.evgen.fanipolparking.presentation.screens.viewmodels.AdminAddCarViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            style="@style/TextViewStyle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/car_number_info"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextViewStyle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/car_model"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05
" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextViewStyle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/driver_phone"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextViewStyle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/pay_day"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <EditText
            android:id="@+id/editAddNumber"
            style="@style/EditTextAddCarStyle"
            android:layout_marginStart="8dp"
            android:hint="@string/car_number_add"
            android:maxLength="7"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            android:text="@={viewmodel.editCarNumber}"/>

        <EditText
            android:id="@+id/editAddCar"
            style="@style/EditTextAddCarStyle"
            android:layout_marginStart="8dp"
            android:hint="@string/car_model_add"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            android:text="@={viewmodel.editCarModel}"/>

        <EditText
            android:id="@+id/editAddPhone"
            style="@style/EditTextAddCarStyle"
            android:layout_marginStart="8dp"
            android:hint="@string/driver_phone_add"
            android:inputType="phone"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            android:text="@={viewmodel.editPhone}"/>

        <EditText
            android:id="@+id/editAddPayDay"
            style="@style/EditTextAddCarStyle"
            android:layout_marginStart="8dp"
            android:hint="@string/pay_day_add"
            android:inputType="date"
            android:maxLength="10"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            android:text="@={viewmodel.editPayDay}"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <ImageButton
            android:id="@+id/saveCarButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/save_button_selector"
            android:src="@drawable/ic_check_black_24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editAddPayDay" />


    </android.support.constraint.ConstraintLayout>
</layout>