<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/orange"
        android:gravity="center">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/info"
            android:textSize="24sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/car_model"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.078125" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/car_number_info"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView14"
        style="@style/TextViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/pay_day"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <TextView
        android:id="@+id/foundedCar"
        style="@style/TextViewStyle"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/guideline10" />

    <TextView
        android:id="@+id/foundedCarNumber"
        style="@style/TextViewStyle"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/guideline10" />

    <TextView
        android:id="@+id/foundedCarPayDay"
        style="@style/TextViewStyle"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/guideline10" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</android.support.constraint.ConstraintLayout>