<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewmodel"
            type="com.example.evgen.fanipolparking.presentation.screens.viewmodels.AdminEditCarViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/car_number_info"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/car_model"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/driver_phone"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/created_day"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/pay_day"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <EditText
            android:id="@+id/editRefactorNumber"
            style="@style/EditTextAddCarStyle"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            android:text="@={viewmodel.carNumber}"/>

        <EditText
            android:id="@+id/editRefactorCar"
            style="@style/EditTextAddCarStyle"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            android:text="@={viewmodel.carModel}"/>

        <EditText
            android:id="@+id/editRefactorPhone"
            style="@style/EditTextAddCarStyle"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            android:text="@={viewmodel.phone}"/>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewmodel.createdDay}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/guideline9" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewmodel.payDay}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/guideline9" />

        <Button
            android:id="@+id/extendPayDayButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            textSwap="@{viewmodel.isExtendButtonPressed}"/>

        <Button
            android:id="@+id/saveChangesButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/save_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addDays" />

        <Button
            android:id="@+id/deleteCarButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/delete_car"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveChangesButton" />

        <EditText
            android:id="@+id/addDays"
            style="@style/EditTextAddCarStyle"
            android:layout_marginStart="8dp"
            android:background="#ec9797"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toBottomOf="@+id/extendPayDayButton"
            android:visibility="invisible"
            android:hint="@string/pay_day_count"
            android:inputType="number"
            android:text="@={viewmodel.extendDays}"/>

    </android.support.constraint.ConstraintLayout>
</layout>